--- a/Bloques de github/bloques.html
+++ b/Bloques de github/bloques.html
@@ -1,13 +1,37 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="Bloques.css">
-</head>
-<body>
-    
-</body>
+    <head>
+        <link rel="stylesheet" type="text/css" href="./css/style3.css">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="Bloques.css">
+        <link rel="stylesheet" href="Style2.css">
+        <title>GitHub Blocks</title>
+    </head>
+    <body>
+        <div class="container">
+            <div class="subcon">
+                <img class="ïmg octocat" src="scubatocat.png" alt="dj dafpunk">
+                <img img class="ïmg octocat" src="catstello.png" alt="dj dafpunk">
+                <img img class="ïmg octocat" src="mcefeeline.jpeg" alt="dj dafpunk">
+            </div>
+            <div class="subcon2">
+                <img class="ïmg octocat" src="gobbleotron.gif" alt="dj dafpunk">
+                <img img class="ïmg octocat" src="mcefeeline.jpeg" alt="dj dafpunk">
+            </div>
+            <div class="subcon3">
+                <img class="ïmg octocat" src="daftpunktocat-thomas.gif" alt="dj dafpunk">
+                <div class="subcon4">
+                    <img img class="ïmg octocat2" src="skatetocat.png" alt="dj dafpunk">
+                    <img img class="ïmg octocat2" src="vinyltocat.png" alt="dj dafpunk">
+                </div>
+                <img img class="ïmg octocat" src="topguntocat.png" alt="dj dafpunk">
+            </div>
+            <div class="subconfooter">
+            </div>
+        </div>
+    </body>
+
 </html>
