--- a/Barra_navegacion/Index.html
+++ b/Barra_navegacion/Index.html
@@ -5,20 +5,19 @@
     <title>Home</title>
     <link rel="stylesheet" href="navegacion.css">
   </head>
+
   <body>
-    <h1></h1>
-    <nav>
-      <ul>
+    <ul>
         <li><a href="" target="_blank">Profile</a></li>
         <li><a href="" target="_blank">Home</a></li>
         <li><a href="https://github.com/paltacontomate/Coding-Dojo" target="_blank">Sobre mí</a></li>
         <li><a href="https://github.com/paltacontomate/Fundamento-de-la-web" target="_blank">Portafolio</a></li>
         <li><a href="https://github.com/paltacontomate" target="_blank">My Profiel</a></li>
             
-    <div>
-        <li><a href="https://github.com/signup?ref_cta=Sign+up&ref_loc=header+logged+out&ref_page=%2F<user-name>%2F<repo-name>&source=header-repo&source_repo=paltacontomate%2FActividad-1" target="_blank"><span class="boton"> Sign Out </span></div></a></li>  
+  
+        <li><a href="https://github.com/signup?ref_cta=Sign+up&ref_loc=header+logged+out&ref_page=%2F<user-name>%2F<repo-name>&source=header-repo&source_repo=paltacontomate%2FActividad-1" target="_blank"><span class="boton"> Sign Out </span></a></li>  
     </ul>
-    </nav>
+    
 </body>
 </html>
 
